# yt-music-tui

./: .gitignore  Cargo.toml  KEYBINDINGS.md  README.md  setup.sh
.github/workflows/: release.yml
src/: app.rs  main.rs
src/player/: mod.rs
src/search/: bandcamp.rs  dailymotion.rs  mod.rs  soundcloud.rs  twitch.rs  vimeo.rs  youtube.rs
src/ui/: mod.rs
