[package]
name = "music-player"
version = "0.2.0"
edition = "2021"
description = "MELODY: Pro kawaii Rust TUI music player with Vim keybindings"
authors = ["Your Name"]
license = "MIT"
keywords = ["music", "tui", "yt-dlp", "streaming", "kawaii"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
anyhow = "1"
which = "6"
walkdir = "2"
async-trait = "0.1"
urlencoding = "2"
chrono = { version = "0.4.44", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
